--- a/MagazineManagment.ClientApplication/Views/CategoryClient/Delete.cshtml
+++ b/MagazineManagment.ClientApplication/Views/CategoryClient/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MagazineManagment.DTO.ViewModels
-@model CategoryUpdateViewModel
+@model CategoryViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -10,12 +10,12 @@
 
     <div class="form-group">
         <h2>Are u sure to delte this record ?  </h2>
-        <p>@Model.CategoryName</p>
+        <p>Name : @Model.CategoryName</p>
+        <p>Created by : @Model.CreatedBy</p>
+        <p>Created : @Model.CreatedOn</p>
     </div>
     <input type="hidden" readonly asp-for="Id" />
     <input type="hidden" readonly asp-for="CategoryName" />
     <input type="submit" value="Delete category" class="btn btn-danger" />
     
 </form>
-
-
