--- a/MagazineManagment.ClientApplication/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MagazineManagment.ClientApplication/Areas/Identity/Pages/Account/Login.cshtml
@@ -50,16 +50,22 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h3>Use another service to log in.</h3>
+            <h3>Log in with one of these accounts</h3>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
                         <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
+                            Admin
+                            Username: <b>admin@MagazineManagment.com</b> | Password: <b>Admin1234$</b>
                         </p>
+                        <hr />
+                        <p>
+                            Employee
+                            Username: <b>employee@MagazineManagment.com</b> | Password: <b>Employee1234$</b>
+                        </p>
+                        <hr />
                     </div>
                 }
                 else
